# hvac-simulation

./: .bumpversion.cfg  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.md  README.rst  ami_data.py  hvac_simul_marimo.py  pyproject.toml  tasks.py  tess_experiment.py  tess_hvac_simulation.py
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
hvac_simulation/: __init__.py  boptest_suite.py  heuristic_order.py  hvac_order_default_params.json  kpi.py  tess_control.py
hvac_simulation/auction/: auction.py  geometry.py
hvac_simulation/bidding_strategy/: heuristic_order.py
hvac_simulation/boptest/: boptest_suite.py
hvac_simulation/tess_control/: kpi.py  tess_control.py
hvac_simulation/utils/: logger.py
marimo_workbooks/: hvac_simul_marimo.py  tess_hvac_simulation.py  tess_simulation_result.py
tests/: __init__.py  test_hvac_simulation.py
