[tool.poetry]
name = "hvac-simulation"
version = "0.1.0"
description = ""
authors = ["Adhithyan Sakthivelu <admkr.2010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
marimo = "^0.10.17"
pandas = "^2.2.3"
numpy = "^2.2.2"
requests = "^2.32.3"
matplotlib = "^3.10.0"
datetime = "^5.5"
tabulate = "^0.9.0"
statistics = "^1.0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
